updated deployment steps in pipeline

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -65,3 +65,9 @@ jobs:
         uses: actions/checkout@v4
       - name: Deploy model
         run: echo "Deploying model..."
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Build Docker Image
+        run: docker build -t satyamd31/sentiment-analysis-app:v2 .
+      - name: Push Docker Image
+        run: docker push satyamd31/sentiment-analysis-app:v2
