added dynamic versioning to dockerhub image deployment

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -61,13 +61,42 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     steps:
+      # Step 1
       - name: Checkout code
         uses: actions/checkout@v4
+      
+      # Step 2
       - name: Deploy model
         run: echo "Deploying model..."
+      
+      # Step 3
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      
+      # Step 4
+      - name: Fetch Latest Docker Tag
+        id: fetch_tag
+        run: |
+          # Fetch the latest tag from Docker Hub
+          latest_tag=$(curl -s https://registry.hub.docker.com/v2/repositories/satyamd31/sentiment-analysis-app/tags \
+          | jq -r '.results[].name' | grep '^v[0-9]\+$' | sort -V | tail -n 1)
+          echo "Latest tag: $latest_tag"
+
+          # If no tag exists, start with v1
+          if [ -z "$latest_tag" ]; then
+            new_version="v1"
+          else
+            # Extract the numeric part, increment it, and prepend 'v'
+            new_version="v$(( ${latest_tag#v} + 1 ))"
+          fi
+
+          echo "New version: $new_version"
+          echo "tag=$new_version" >> $GITHUB_ENV
+      
+      # Step 5
       - name: Build Docker Image
-        run: docker build -t satyamd31/sentiment-analysis-app:v2 .
+        run: docker build -t satyamd31/sentiment-analysis-app:${{ env.tag }} .
+      
+      # Step 6
       - name: Push Docker Image
-        run: docker push satyamd31/sentiment-analysis-app:v2
+        run: docker push satyamd31/sentiment-analysis-app:${{ env.tag }}
