updated k8s deployment configuration

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -115,4 +115,4 @@ jobs:
       - name: Update Kubernetes Deployment
         run: |
           sed -i "s/{{IMAGE_TAG}}/${{ env.tag }}/g" kubernetes/deployment.yaml
-          kubectl apply -f kubernetes/deployment.yaml
+          kubectl apply -f kubernetes/deployment.yaml --validate=false
